@@ -1,5 +1,5 @@
 '''
-PackageItem diagram item
+ClassItem diagram item
 '''
 # vim:sw=4
 
@@ -8,10 +8,8 @@ import diacanvas
 import gobject
 import pango
 
-class PackageItem(ModelElementItem):
+class ClassItem(ModelElementItem):
     __gsignals__ = { 'need_update': 'override' }
-    TAB_X=50
-    TAB_Y=20
     MARGIN_X=60
     MARGIN_Y=30
     FONT='sans bold 10'
@@ -24,29 +22,29 @@ class PackageItem(ModelElementItem):
 	self.__name = diacanvas.CanvasText()
 	self.add_construction(self.__name)
 	assert self.__name != None
-	font = pango.FontDescription(PackageItem.FONT)
+	font = pango.FontDescription(ClassItem.FONT)
 	self.__name.set(font=font, width=self.width,
 			alignment=pango.ALIGN_CENTER)
 	# Center the text:
 	w, h = self.__name.get_property('layout').get_pixel_size()
-	self.__name.move(0, (self.height - h + PackageItem.TAB_Y) / 2)
+	print 'ClassItem:',w,h
+	self.__name.move(0, (self.height - h) / 2)
 	self.__name.set(height=h)
 	# Hack since self.<method> is not GC'ed
-	def on_text_changed(text_item, text, package):
-	    if text != package.subject.name:
-		package.subject.name = text
-		package.__name_update()
+	def on_text_changed(text_item, text, actor):
+	    if text != actor.subject.name:
+		actor.subject.name = text
+		actor.__name_update()
 	self.__name.connect('text_changed', on_text_changed, self)
 	#self.__name.connect('text_changed', self.on_text_changed)
 
     def __name_update (self):
-	'''Center the name text in the package body.'''
+	'''Center the name text in the usecase.'''
 	w, h = self.__name.get_property('layout').get_pixel_size()
-	self.set(min_width=w + PackageItem.MARGIN_X,
-		 min_height=h + PackageItem.MARGIN_Y)
+	self.set(min_width=w + ClassItem.MARGIN_X,
+		 min_height=h + ClassItem.MARGIN_Y)
 	a = self.__name.get_property('affine')
-	aa = (a[0], a[1], a[2], a[3], a[4], \
-		(self.height - h + PackageItem.TAB_Y) / 2)
+	aa = (a[0], a[1], a[2], a[3], a[4], (self.height - h) / 2)
 	self.__name.set(affine=aa, width=self.width, height=h)
 
     def load(self, store):
@@ -54,25 +52,17 @@ class PackageItem(ModelElementItem):
 	self.__name_update()
 
     def do_need_update(self):
-	'''Always request updates for the aggregated items.'''
 	self.__name.request_update()
 
     def on_update(self, affine):
 	ModelElementItem.on_update(self, affine)
-	O = 0.0
-	H = self.height
-	W = self.width
-	X = PackageItem.TAB_X
-	Y = PackageItem.TAB_Y
-	line = ((X, Y), (X, O), (O, O), (O, H), (W, H), (W, Y), (O, Y))
-	self.__border.line(line)
+	#self.__border.ellipse(center=(self.width / 2, self.height / 2), width=self.width - 0.5, height=self.height - 0.5)
+	self.__border.rectangle((1,1),(self.width-1, self.height-1))
 	self.__border.request_update()
 	self.update_child(self.__name, affine)
-	b1, b2, b3, b4 = self.bounds
-	self.set_bounds((b1 - 1, b2 - 1, b3 + 1, b4 + 1))
 
     def on_handle_motion (self, handle, wx, wy, mask):
-	retval = ModelElementItem.on_handle_motion(self, handle, wx, wy, mask)
+	retval  = ModelElementItem.on_handle_motion(self, handle, wx, wy, mask)
 	self.__name_update()
 	return retval
 
@@ -124,5 +114,5 @@ class PackageItem(ModelElementItem):
 	if text != self.subject.name:
 	    self.subject.name = text
 
-gobject.type_register(PackageItem)
+gobject.type_register(ClassItem)
 
